--- a/templates/index/cookies.twig
+++ b/templates/index/cookies.twig
@@ -1,23 +1,37 @@
 <ul class=" ms-2 row">
 
-		<li><h1>Cookie Policy</h1>
+	<li>
+		<h1>Cookie Policy</h1>
 		<p>This website uses cookies to ensure you get the best experience on our website.</p>
 		<h2>What Are Cookies?</h2>
-		<p>Cookies are small text files that are stored on your computer or mobile device when you visit a website. They allow the website to recognize your device and remember certain information about your visit.</li>
-		<li><h2>How We Use Cookies</h2></li>
-		<p>We use cookies for a variety of purposes, including:</p>
-		<ul>
-			<li>To provide a personalized experience for our users.</li>
-			<li>To analyze how users interact with our website so we can improve its performance and functionality.</li>
-			<li>To display targeted advertisements to users who have visited our website.</li>
-		</ul>
-		<li><h2>Your Choices Regarding Cookies</h2>
-		<li><p>You can choose to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually modify your browser settings to decline cookies if you prefer. However, this may prevent you from taking full advantage of the website.</p>
-		<li><h2>Changes to Our Cookie Policy</h2>
-		<li><p>We may update our Cookie Policy from time to time. We will notify you of any changes by posting the new Cookie Policy on this page.</p>
-		<li><h2>Contact Us</h2>
-		<li><p>If you have any questions about our Cookie Policy, please contact us.</p>
-		<li><p>
+		<p>Cookies are small text files that are stored on your computer or mobile device when you visit a website. They allow the website to recognize your device and remember certain information about your visit.</p>
+	</li>
+	<li>
+		<h2>How We Use Cookies</h2>
+	</li>
+	<p>We use cookies for a variety of purposes, including:</p>
+	<ul>
+		<li>To provide a personalized experience for our users.</li>
+		<li>To analyze how users interact with our website so we can improve its performance and functionality.</li>
+		<li>To display targeted advertisements to users who have visited our website.</li>
+	</ul>
+	<li>
+		<h2>Your Choices Regarding Cookies</h2>
+		<p>You can choose to accept or decline cookies. Most web browsers automatically accept cookies, but you can usually modify your browser settings to decline cookies if you prefer. However, this may prevent you from taking full advantage of the website.</p>
+	</li>
+	<li>
+		<h2>Changes to Our Cookie Policy</h2>
+		<p>We may update our Cookie Policy from time to time. We will notify you of any changes by posting the new Cookie Policy on this page.</p>
+	</li>
+	<li>
+		<h2>Contact Us</h2>
+	</li>
+	<li>
+		<p>If you have any questions about our Cookie Policy, please contact us.</p>
+	</li>
+	<li>
+		<p>
 			<a href="/#contact" class="btn btn-primary" data-bs-dismiss="modal">Contact Us</a>
 		</p>
+	</li>
 </ul>
