--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,6 +18,7 @@
 							<h1 class="text-center m-2">Register</h1>
 						</div>
 						<div class="container card-body bg-dark">
+							<a href="{{ path('app_login') }}"> Log in</a>
 							{{ form_start(registrationForm) }}
 							<div class="form-group m-2">
 								{{ form_row(registrationForm.email, {'attr': {'class': 'form-control', 'placeholder': 'Email'}}) }}
