--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<meta name="description" content="Explore a diverse collection of my work in web development, showcasing responsive designs, interactive projects, and innovative solutions. Get inspired by my portfolio and discover how I can bring your ideas to life.">
+
 		<title>
-			FoundTexas -
+			FoundTexas.net -
 			{% block title %}
 				none
 			{% endblock %}
