--- a/templates/index/ProjectsHighlights.twig
+++ b/templates/index/ProjectsHighlights.twig
@@ -20,7 +20,7 @@
 									<h5 class="p-0 m-0 accent-color text-center">Card title</h5>
 									<p class=" m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								</div>
-								<a href="{{project.fileref}}" class="btn btn-main"></a>
+								<a href="{{project.linkref ?? '#' }}" class="btn btn-main"></a>
 							</div>
 						</div>
 
