--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -16,7 +16,32 @@ a, label, p, h1, h2, h3, h4, h5, h6, li, span {
   color: #FFFFFF;
 }
 
+/* CSS ANIMATIONS */
+.typing-effect {
+  overflow: hidden;
+  white-space: wrap;
+  margin: 0 auto;
+}
 
+.typing-effect::after {
+  content: '';
+  display: inline-block;
+  vertical-align: bottom;
+  width: 0;
+  animation: typing 5s steps(30, end) infinite;
+}
+
+/* Keyframes for the typing animation */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* Link color */
 .main-color {
   color: #6f1b6f;
 }
