--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,6 +48,12 @@
 	</head>
 	
 	<body>
+		<div id="loading" class="position-fixed container-fluid p-0" style="z-index: 900000; height:101vh; background-color:#111111;">
+			<div class="row d-flex align-items-center justify-content-center p-5 w-100 h-100" >
+				<img class="" src="{{ asset('loadgif.gif') }}" style="width: 40vw; height:auto;" alt="Loading..." />
+			</div>
+		</div>
+
 		{% block sound %}
 			<audio class="audio-sfx-group" id="audiopress" src="{{ asset('sounds/pressUI.mp3') }}"></audio>
 			<audio class="audio-sfx-group" id="audioback" src="{{ asset('sounds/backUI.mp3') }}"></audio>
@@ -69,5 +75,35 @@
 		{% block foot %}
 			{% include 'index/footer.twig' %}
 		{% endblock %}
+
+	<script>
+
+		document.addEventListener("DOMContentLoaded", function() {
+			// Function to show the loading spinner
+			function showLoading() {
+				document.getElementById('loading').style.display = 'block';
+			}
+
+			// Function to hide the loading spinner
+			function hideLoading() {
+				document.getElementById('loading').style.display = 'none';
+			}
+
+			// Show the loading spinner when the page starts loading or refreshing
+			showLoading();
+
+			// Add a delay before hiding the loading spinner (example: 1000ms = 1 second)
+			setTimeout(function() {
+				hideLoading(); // Hide the loading spinner after the specified delay
+			}, 100); // Change the delay value as needed
+
+			// Event listener to detect when the page is being refreshed
+			window.addEventListener('beforeunload', function() {
+				showLoading(); // Show the loading spinner before the page is refreshed
+			});
+		});
+
+		</script>
+
 	</body>
 </html>
