--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -11,8 +11,8 @@
 {% block body %}
 
 	{% include 'index/AboutMe.twig' %}
-	{% include 'index/GameHighlights.twig' with {'projects': Project, 'type': 'games','textRef': 'GamesPortfolio', 'headText': 'Games Portfolio', 'darkbg': true} %}
-	{% include 'index/ProjectsHighlights.twig' with {'projects': Project, 'type': 'web-projects','textRef': 'WebPortfolio', 'headText': 'Web Portfolio', 'darkbg': true, 'color': 'bg-main-gradient-alter'} %}
+	{% include 'index/GameHighlights.twig' with {'projects': games, 'type': 'games','textRef': 'GamesPortfolio', 'headText': 'Games Portfolio', 'darkbg': true} %}
+	{% include 'index/ProjectsHighlights.twig' with {'projects': Projects, 'type': 'web-projects','textRef': 'WebPortfolio', 'headText': 'Web Portfolio', 'darkbg': true, 'color': 'bg-main-gradient-alter'} %}
 	{% include 'index/contact.twig' %}
 
 {% endblock %}
