--- a/templates/index/AboutMe.twig
+++ b/templates/index/AboutMe.twig
@@ -17,7 +17,7 @@
             </p>
         </div>
         <div>
-            <button type="button" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">
+            <button type="button" class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">
                 <h5 class="p-0 m-0"> &nbsp;<i class="fa fa-file" aria-hidden="true"></i> CV&nbsp;</h5>
             </button>
         </div>
