--- a/templates/index/ProjectsHighlights.twig
+++ b/templates/index/ProjectsHighlights.twig
@@ -29,7 +29,7 @@
 				{% endfor %}
 			</div>
 			<div class="row justify-content-center">
-				<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 accent-bg text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All
+				<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 bg-accent text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All
 					{{type}}...&nbsp;&nbsp;</button>
 			</div>
 		</div>
