--- a/templates/index/contact.twig
+++ b/templates/index/contact.twig
@@ -1,6 +1,6 @@
 {# templates/contact.html.twig #}
 
-<section id="contact" class="accent-bg-dark" style="min-height: 100vh;">
+<section id="contact" class="bg-accent-dark" style="min-height: 100vh;">
     {% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': "Let's Chat! 🐼", 'darkbg': true} %}
 
     <div class="container px-3 py-5">
