--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -29,7 +29,7 @@
 	</nav>
 </div>
 
-<button class="custom-btn position-fixed rounded-4 accent-bg d-flex align-items-center" style="z-index: 1050; top: 5px; right: 5px;" onclick="playSound('audiopress')" data-bs-target="#pauseMenuModal" aria-label="Pause menu button" data-bs-toggle="modal" type="button">
+<button class="custom-btn position-fixed rounded-4 bg-accent d-flex align-items-center" style="z-index: 1050; top: 5px; right: 5px;" onclick="playSound('audiopress')" data-bs-target="#pauseMenuModal" aria-label="Pause menu button" data-bs-toggle="modal" type="button">
 	<i class="fa fa-home my-2 mx-1 fa-2xl" aria-hidden="true" style="color: #ffffff;"></i>
 	<p class="p-0 m-0 d-none d-md-block">MENU</p>
 </button>
@@ -38,7 +38,7 @@
 <!-- Modal -->
 <div class="modal fade" id="pauseMenuModal" tabindex="-1" aria-label="Pause menu modal" aria-labelledby="pauseMenuModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered modal-lg">
-		<div class="modal-content accent-bg-dark">
+		<div class="modal-content bg-accent-dark">
 			<div class="modal-header">
 				<h2 class="modal-title text-center" id="pauseMenuModalLabel">Pause Menu</h2>
 				<button type="button" class="btn-close" onclick="playSound('audioback')" data-bs-dismiss="modal" aria-label="Close"></button>
