--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -1,348 +1,91 @@
-<style>
-
-
-	.container-games {
-		overflow: hidden;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 100%;
-		color: #fff;
-		height: 80vh;
-	}
-
-	.slider {
-		width: 100% !important;
-		height: 100% !important;
-		transition: transform 900ms;
-		position: relative;
-		perspective: 1000px;
-		max-height: 100%;
-		max-width: 100%;
-		will-change: transform;
-
-		&:not(.zoom) {
-			.item {
-				transition: all 900ms ease-in-out, opacity 400ms linear 0;
-				opacity: 0;
-
-				&.active {
-					width: 100% !important;
-					height: 100% !important;
-					line-height: 100%;
-					position: relative;
-					display: flex;
-					opacity: 1;
-					pointer-events: all;
-
-
-					.custom-btn {
-						transform: scale(3);
-					}
-				}
-
-				&:not(.active) {
-					display: none;
-				}
-
-				&.item1 {
-					transform: rotateY(0deg) translateZ(0);
-				}
-
-				&.item2 {
-					transform: rotateY(60deg) translateZ(0);
-				}
-
-				&.item3 {
-					transform: rotateY(120deg) translateZ(0);
-				}
-				&.item4 {
-					transform: rotateY(180deg) translateZ(0);
-				}
-
-				&.item5 {
-					transform: rotateY(240deg) translateZ(0);
-				}
-
-				&.item6 {
-					transform: rotateY(300deg) translateZ(0);
-				}
-			}
-		}
-
-		&.zoom {
-			.item {
-				transition: all 900ms ease-in-out, opacity 300ms linear 500ms;
-				opacity: 0.5;
-			}
-			span {
-				display: none;
-			}
-			.custom-btn {
-				display: none;
-			}
-		}
-
-	}
-
+<style type="text/css">
 	.wrapper {
 		height: 100%;
-		width: 100%;
-		position: absolute;
-		transform-style: preserve-3d;
-		transition: transform 900ms ease-in-out;
+		margin: 0;
 		display: flex;
-		align-items: center;
 		justify-content: center;
-		will-change: transform;
+		align-items: center;
+		perspective: 1000px;
+		background-color: #f0f0f0;
+	}
+
+	.carousel {
+		width: 100%;
+		height: 100%;
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		transform-style: preserve-3d;
+		transition: transform 0.66s;
 	}
 
 	.item {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		position: absolute;
-		width: 39%;
-		height: 50%;
-		line-height: 50%;
-		color: #fff;
-		background-repeat: no-repeat;
-		background-size: cover !important;
+		width: 100px;
+		height: 100px;
+		background-size: cover; /* Cover the entire div with the background image */
 		background-position: center;
-		transition: all 900ms ease-in-out;
-		transform-origin: center;
-		pointer-events: none;
-		will-change: transform;
 
-		&.item1 {
-			transform: rotateY(0deg) translateZ(1000px);
-
-			&.active {
-				transform: rotateY(0deg) translateZ(500px);
-				opacity: 1;
-			}
-		}
-
-		&.item2 {
-			transform: rotateY(60deg) translateZ(1000px);
-
-			&.active {
-				transform: rotateY(60deg) translateZ(500px);
-				opacity: 1;
-			}
-		}
-
-		&.item3 {
-			transform: rotateY(120deg) translateZ(1000px);
-
-			&.active {
-				transform: rotateY(120deg) translateZ(500px);
-				opacity: 1;
-			}
-		}
-
-		&.item4 {
-			transform: rotateY(180deg) translateZ(1000px);
-
-			&.active {
-				transform: rotateY(180deg) translateZ(500px);
-				opacity: 1;
-			}
-		}
-
-		&.item5 {
-			transform: rotateY(240deg) translateZ(1000px);
-
-			&.active {
-				transform: rotateY(240deg) translateZ(500px);
-				opacity: 1;
-			}
-		}
-
-		&.item6 {
-			transform: rotateY(300deg) translateZ(1000px);
-
-			&.active {
-				transform: rotateY(300deg) translateZ(500px);
-				opacity: 1;
-			}
-		}
-	}
-
-	.arrow {
+		border: 1px solid #ccc;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		position: absolute;
 		top: 50%;
-		cursor: pointer;
-		border-radius: 50%;
-		width: 2rem;
-		height: 2rem;
-		transition: all 0.1s ease-in-out;
-		will-change: transform;
-
-		&.arrow-next {
-			right: 1rem;
-			background: url('https://alikinvv.github.io/3d-carousel/build/img/arrow-right.svg') no-repeat center #6f1b6f39;
-			background-size: 2rem !important;
-
-			&:hover {
-				transform: scale(1.1);
-				background: url('https://alikinvv.github.io/3d-carousel/build/img/arrow-right.svg') no-repeat center #6F1B6F;
-			}
-		}
-
-		&.arrow-prev {
-			left: 1rem;
-			background: url('https://alikinvv.github.io/3d-carousel/build/img/arrow-left.svg') no-repeat center #6f1b6f39;
-			background-size: 2rem !important;
-
-			&:hover {
-				transform: scale(1.1);
-				background: url('https://alikinvv.github.io/3d-carousel/build/img/arrow-left.svg') no-repeat center #6F1B6F;
-			}
-		}
+		left: 50%;
+		transform-origin: center center 0;
+		transition: transform 0.5s;
 	}
 </style>
 
-<section id="Games" class="bg-main-dark rounded-top-4 m-0 w-100 row p-0 m-0 justify-content-evenly" style="min-height: 93vh;">
-
+<div class="row justify-content-center bg-main-dark p-0 m-0">
 	<h3 class='text-center py-3 m-0'>Game Highlights</h3>
+</div>
 
-	<div class="container-games p-0 m-0 w-100">
-		<div class="slider">
-			<div class="wrapper">
-				<div style="background-image: url('https://i.natgeofe.com/k/75ac774d-e6c7-44fa-b787-d0e20742f797/giant-panda-eating_4x3.jpg')" class="item item1 active">
-					<div class="item__info">
-						<p class="item__year">
-							<span>1483 - 1484</span>
-						</p>
-						<p class="item__name">
-							<span>BIRH OF VENUS</span>
-						</p>
-						<buton href="javascript:void(0)" class=" custom-btn rounded-2 p-1 m-2 accent-bg text-white">
-							<span>Discover more</span>
-						</buton>
-					</div>
-				</div>
-				<div style="background-image: url('https://alikinvv.github.io/3d-carousel/build/img/slide1.jpg')" class="item item2">
-					<div class="item__info">
-						<p class="item__year">
-							<span>1481 - 1484</span>
-						</p>
-						<p class="item__name">
-							<span>BIRH OF VENUS</span>
-						</p>
-						<a href="javascript:void(0)" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white">
-							<span>Discover more</span>
-						</a>
-					</div>
-				</div>
-				<div style="background-image: url('https://alikinvv.github.io/3d-carousel/build/img/slide3.jpg')" class="item item3">
-					<div class="item__info">
-						<p class="item__year">
-							<span>1500 - 1501</span>
-						</p>
-						<p class="item__name">
-							<span>THE STORY OF VIRGINIA</span>
-						</p>
-						<a href="javascript:void(0)" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white">
-							<span>Discover more</span>
-						</a>
-					</div>
-				</div>
-				<div style="background-image: url('https://i.natgeofe.com/k/75ac774d-e6c7-44fa-b787-d0e20742f797/giant-panda-eating_4x3.jpg')" class="item item4">
-					<div class="item__info">
-						<p class="item__year">
-							<span>1483 - 1484</span>
-						</p>
-						<p class="item__name">
-							<span>BIRH OF VENUS</span>
-						</p>
-						<a href="javascript:void(0)" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white">
-							<span>Discover more</span>
-						</a>
-					</div>
-				</div>
-				<div style="background-image: url('https://alikinvv.github.io/3d-carousel/build/img/slide1.jpg')" class="item item5">
-					<div class="item__info">
-						<p class="item__year">
-							<span>1481 - 1484</span>
-						</p>
-						<p class="item__name">
-							<span>BIRH OF VENUS</span>
-						</p>
-						<a href="javascript:void(0)" class=" custom-btn rounded-2 p-1 m-2 accent-bg text-white">
-							<span>Discover more</span>
-						</a>
-					</div>
-				</div>
-				<div style="background-image: url('https://alikinvv.github.io/3d-carousel/build/img/slide3.jpg')" class="item item6">
-					<div class="item__info">
-						<p class="item__year">
-							<span>1500 - 1501</span>
-						</p>
-						<p class="item__name">
-							<span>THE STORY OF VIRGINIA</span>
-						</p>
-						<a href="javascript:void(0)" class=" custom-btn rounded-2 p-1 m-2 accent-bg text-white">
-							<span>Discover more</span>
-						</a>
-					</div>
+<section id="test" class="bg-main-dark p-0 m-0 d-flex justify-content-evenly" style="min-height: 80vh; align-items: center; overflow: hidden; perspective: 3000px;">
+
+	<button class="carousel-control-prev" type="button" onclick="rotateCarousel(-{{games|length}})">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+	</button>
+
+	<div class="carousel row">
+
+		{% for game in games %}
+			<div class="item bg-dark border-3 rounded-4" style="width: 50vw; height: 50vh; position: absolute; top: 50%; left: 50%; background-image: url('{{ game.iconref }}'); transform: translate(-50%, -50%) rotateY({{ ((loop.index - 1 ) * ( (360 / games|length)) ) }}deg) translateZ(1000px);">
+				<div class="container m-5 row justify-content-center bg-main-dark-translucent p-3 rounded-4" >
+					<h5 class="text-white text-center" style="margin: 0; text-align:">{{ game.name }}</h5>
+
+					<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 bg-accent text-white" onclick="window.location.href='{{ path('app_project_detail', {'id': game.id}) }}'" data-bs-dismiss="modal">
+					&nbsp;&nbsp;<i class="fa fa-play" aria-hidden="true"></i>&nbsp;&nbsp;
+					</button>
 				</div>
 			</div>
-
-			<div class="arrow arrow-next"></div>
-			<div class="arrow arrow-prev"></div>
-		</div>
+		{% endfor %}
 
 	</div>
+
+	<button class="carousel-control-next" type="button" onclick="rotateCarousel({{games|length}})">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="visually-hidden">Previous</span>
+	</button>
+
 </section>
+
+<div class="row justify-content-center bg-main-dark p-0 m-0">
+	<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-3 mb-5 bg-accent text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All
+		{{type}}...&nbsp;&nbsp;</button>
+</div>
 
 
 <script>
-let slider = document.querySelector('.slider');
-let wrapper = document.querySelector('.wrapper');
-let next = document.querySelector('.arrow-next');
-let prev = document.querySelector('.arrow-prev');
-let item = document.querySelectorAll('.item');
-let currdeg = 0;
-let active = 0;
+	let currentRotation = 0;
 
-next.addEventListener('click', () => {
-    slider.classList.toggle('zoom');
+function rotateCarousel(direction) {
+const rotationIncrement = 360 / direction; // Degrees to rotate per step
 
-    currdeg = currdeg - 60;
-
-    if (active === item.length - 1) {
-        active = 0;
-    } else {
-        active++;
-    } toggle();
-});
-
-prev.addEventListener('click', () => {
-    slider.classList.toggle('zoom');
-
-    currdeg = currdeg + 60;
-
-    if (active === 0) {
-        active = item.length - 1;
-    } else {
-        active--;
-    } toggle();
-});
-
-let toggle = () => {
-    setTimeout(() => {
-        for (let i = 0; i < item.length; i++) {
-            item[i].classList.remove('active');
-        }
-
-        item[active].classList.add('active')
-        wrapper.style.transform = 'rotateY(' + currdeg + 'deg)';
-    }, 900);
-
-    setTimeout(() => {
-        slider.classList.toggle('zoom');
-    }, 1900);
+const carousel = document.querySelector('.carousel');
+currentRotation += rotationIncrement;
+carousel.style.transform = `rotateY(${currentRotation}deg)`;
 }
 </script>
