--- a/templates/timeline.twig
+++ b/templates/timeline.twig
@@ -1,6 +1,6 @@
 
 {{ dump(timeline_events) }}
-<section id="timeline" class="accent-bg-dark px-2 rounded-top-5" style="min-height: 100vh; margin-top: -4rem;">
+<section id="timeline" class="bg-accent-dark px-2 rounded-top-5" style="min-height: 100vh; margin-top: -4rem;">
 	{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
 	<div class=" m-md-4">
 		<div class="row m-2">
