--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,7 +76,7 @@
 			{% include 'index/footer.twig' %}
 		{% endblock %}
 
-	<script>
+		<script>
 
 		document.addEventListener("DOMContentLoaded", function() {
 			// Function to show the loading spinner
@@ -92,16 +92,25 @@
 			// Show the loading spinner when the page starts loading or refreshing
 			showLoading();
 
-			// Add a delay before hiding the loading spinner (example: 1000ms = 1 second)
-			setTimeout(function() {
-				hideLoading(); // Hide the loading spinner after the specified delay
-			}, 100); // Change the delay value as needed
-
 			// Event listener to detect when the page is being refreshed
 			window.addEventListener('beforeunload', function() {
 				showLoading(); // Show the loading spinner before the page is refreshed
 			});
+
+			// Event listener to detect when the page is being shown from bfcache (navigating back)
+			window.addEventListener('pageshow', function(event) {
+				if (event.persisted) {
+					// Page is being loaded from the bfcache (navigated back)
+					hideLoading(); // Immediately hide the loading spinner
+				}
+			});
+
+			// Add a delay before hiding the loading spinner (example: 1000ms = 1 second)
+			setTimeout(function() {
+				hideLoading(); // Hide the loading spinner after a short delay
+			}, 100); // Change the delay value as needed
 		});
+
 
 		</script>
 
