--- a/templates/EventLoading/create_Project.twig
+++ b/templates/EventLoading/create_Project.twig
@@ -1,4 +1,4 @@
-<h1>Create Project</h1>
+<h4>Create Project</h4>
 
 {{ form_start(projectForm, {'attr': {'id': 'projectForm'}}) }}
 
@@ -6,8 +6,13 @@
 {{ form_row(projectForm.description) }}
 {{ form_row(projectForm.fileref) }}
 {{ form_row(projectForm.iconref) }}
+{{ form_row(projectForm.linkref) }}
+{{ form_row(projectForm.type) }}
 {{ form_row(projectForm.mileStone) }}
 
-<button type="button" onclick="submitForm('{{path('project_new')}}', 'projectForm', {{projectcur.id}})">Create</button>
+<div class="d-flex justify-content-center my-2">
+	<button class="btn btn-primary" type="button" onclick="submitForm('{{path('project_new')}}', 'projectForm', {{projectcur.id}})">Create</button>
+</div>
+
 
 {{ form_end(projectForm) }}
