--- a/templates/EventLoading/index.html.twig
+++ b/templates/EventLoading/index.html.twig
@@ -6,9 +6,9 @@
 {% block head %}{% endblock %}
 
 {% block body %}
-	<div style="height:100vh;">
-		<div class="row p-5">
-			<div class="col-12 col-md-6 row justify-content-center">
+	<div class="container" style="min-height:100vh;">
+		<div class="row p-2">
+			<div class="col-12 col-md-6 justify-content-center">
 				<h2 class="text-center bg-main p-2 rounded-pill">Milestone Load:</h2>
 				<div class="d-flex justify-content-center align-content-evenly">
 
@@ -22,9 +22,10 @@
 
 				</div>
 			</div>
-			<div class="col-12 col-md-6 row justify-content-center">
+
+			<div class="col-12 col-md-6 justify-content-center">
 				<h2 class="text-center bg-main p-2 rounded-pill">Project Load:</h2>
-				<div class="row justify-content-center align-content-evenly">
+				<div class="d-flex justify-content-center align-content-evenly">
 
 					<select id="ProjectDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('project_new')}}','ProjectContainer', this.value)">
 						<option value="">Select Project</option>
@@ -32,17 +33,17 @@
 							<option value="{{ project.id }}">{{ project.id }}-{{ project.name }}</option>
 						{% endfor %}
 					</select>
-					<button class="btn btn-success my-4 col-auto" onclick="newForm('{{path('project_new')}}', 'ProjectContainer')">+</button>
+					<button class="btn btn-success col-auto" onclick="newForm('{{path('project_new')}}', 'ProjectContainer')">+</button>
 
 				</div>
 			</div>
 		</div>
 
-		<div class="row p-5">
-			<div class="col-12 col-md-6 row justify-content-center">
+		<div class="row p-2">
+			<div class="col-12 col-md-6 justify-content-center">
 				<div id="MilestoneContainer"></div>
 			</div>
-			<div class="col-12 col-md-6 row justify-content-center">
+			<div class="col-12 col-md-6 justify-content-center">
 				<div id="ProjectContainer"></div>
 			</div>
 		</div>
