--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -53,11 +53,14 @@
 
 		{% for game in games %}
 			<div class="item bg-dark border-3 rounded-4" style="width: 50vw; height: 50vh; position: absolute; top: 50%; left: 50%; background-image: url('{{ game.iconref }}'); transform: translate(-50%, -50%) rotateY({{ ((loop.index - 1 ) * ( (360 / games|length)) ) }}deg) translateZ(1000px);">
-				<div class="container m-5 row justify-content-center bg-main-dark-translucent p-3 rounded-4" >
+				<div class="container m-5 row justify-content-center bg-main-dark-translucent p-3 rounded-4">
 					<h5 class="text-white text-center" style="margin: 0; text-align:">{{ game.name }}</h5>
 
-					<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 bg-accent text-white" onclick="window.location.href='{{ path('app_project_detail', {'id': game.id}) }}'" data-bs-dismiss="modal">
-					&nbsp;&nbsp;<i class="fa fa-play" aria-hidden="true"></i>&nbsp;&nbsp;
+					<a href="{{game.linkref ?? path('app_project_detail', {'id': game.id}) }}" class="btn btn-primary">
+						&nbsp;&nbsp;<i class="fa fa-play" aria-hidden="true"></i>&nbsp;&nbsp;
+					</a>
+					<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 bg-accent text-white" href="{{project.linkref ?? '#' }}" onclick="window.location.href='{{ path('app_project_detail', {'id': game.id}) }}'" data-bs-dismiss="modal">
+						&nbsp;&nbsp;<i class="fa fa-play" aria-hidden="true"></i>&nbsp;&nbsp;
 					</button>
 				</div>
 			</div>
