--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -73,8 +73,15 @@
 					<p>You are logged in as
 						{{ app.user.userIdentifier }}</p>
 					<a href="{{ path('app_logout') }}" class="btn btn-danger">Logout</a>
+
+					{% if is_granted('ROLE_SUPER_ADMIN') %}
+						<a href="{{ path('event_load') }}" class="btn btn-info">Add event</a>
+					{% endif %}
 				{% else %}
-					<a href="{{ path('app_login') }}">log in</a> or <a href="{{ path('app_register') }}"> Sign up</a>
+					<a href="{{ path('app_login') }}">log in</a>
+					or
+					<a href="{{ path('app_register') }}">
+						Sign up</a>
 				{% endif %}
 			</div>
 		</div>
