--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -42,9 +42,9 @@
 	<h3 class='text-center py-4 m-0'>Game Highlights</h3>
 </div>
 
-<section id="test" class="bg-main-dark p-0 m-0 d-flex justify-content-evenly" style="min-height: 80vh; align-items: center; overflow: hidden; perspective: 3000px;">
+<section id="test" class="bg-main-dark p-0 m-0 d-flex justify-content-evenly" style="min-height: 80vh; align-items: center; overflow: hidden; perspective: 6000px;">
 
-	<button class="carousel-control-prev" type="button" onclick="rotateCarousel(-{{games|length}})">
+	<button class="carousel-control-prev" type="button" onclick="rotateCarousel({{games|length}})">
 		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 		<span class="visually-hidden">Previous</span>
 	</button>
@@ -52,7 +52,7 @@
 	<div class="carousel row">
 
 		{% for game in games %}
-			<div class="item bg-dark border-3 rounded-4" style="width: 50vw; height: 50vh; position: absolute; top: 50%; left: 50%; background-image: url('{{ game.iconref }}'); transform: translate(-50%, -50%) rotateY({{ ((loop.index - 1 ) * ( (360 / games|length)) ) }}deg) translateZ(1000px);">
+			<div class="item bg-dark border-3 rounded-4" style="width: 80vw; height: 60vh; position: absolute; top: 50%; left: 50%; background-image: url('{{ game.iconref }}'); transform: translate(-50%, -50%) rotateY({{ ((loop.index - 1 ) * ( (360 / games|length)) ) }}deg) translateZ(1000px);">
 				<div class="container m-5 row justify-content-center bg-main-dark-translucent p-3 rounded-4">
 					<h5 class="text-white text-center" style="margin: 0; text-align:">{{ game.name }}</h5>
 
@@ -65,7 +65,7 @@
 
 	</div>
 
-	<button class="carousel-control-next" type="button" onclick="rotateCarousel({{games|length}})">
+	<button class="carousel-control-next" type="button" onclick="rotateCarousel(-{{games|length}})">
 		<span class="carousel-control-next-icon" aria-hidden="true"></span>
 		<span class="visually-hidden">Previous</span>
 	</button>
