--- a/templates/EventLoading/index.html.twig
+++ b/templates/EventLoading/index.html.twig
@@ -12,13 +12,13 @@
 				<h2 class="text-center bg-main p-2 rounded-pill">Milestone Load:</h2>
 				<div class="d-flex justify-content-center align-content-evenly">
 
-					<select id="milestoneDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('milestone_new')}}','MilestoneContainer', this.value)">
+					<select id="milestoneDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('milestone_new')}}','MilestoneContainer', '{{ asset('loadgif.gif') }}', this.value)">
 						<option value="">Select Milestone</option>
 						{% for milestone in milestoneIds %}
 							<option value="{{ milestone.id }}">{{ milestone.id }}-{{ milestone.name }}</option>
 						{% endfor %}
 					</select>
-					<button class="btn btn-success col-auto" onclick="newForm('{{path('milestone_new')}}','MilestoneContainer')">+</button>
+					<button class="btn btn-success col-auto" onclick="newForm('{{path('milestone_new')}}','MilestoneContainer', '{{ asset('loadgif.gif') }}')">+</button>
 
 				</div>
 			</div>
@@ -33,13 +33,13 @@
 				<h2 class="text-center bg-main p-2 rounded-pill">Project Load:</h2>
 				<div class="d-flex justify-content-center align-content-evenly">
 
-					<select id="ProjectDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('project_new')}}','ProjectContainer', this.value)">
+					<select id="ProjectDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('project_new')}}','ProjectContainer', '{{ asset('loadgif.gif') }}', this.value)">
 						<option value="">Select Project</option>
 						{% for project in projectsIds %}
 							<option value="{{ project.id }}">{{ project.id }}-{{ project.name }}</option>
 						{% endfor %}
 					</select>
-					<button class="btn btn-success col-auto" onclick="newForm('{{path('project_new')}}', 'ProjectContainer')">+</button>
+					<button class="btn btn-success col-auto" onclick="newForm('{{path('project_new')}}', 'ProjectContainer', '{{ asset('loadgif.gif') }}')">+</button>
 
 				</div>
 			</div>
@@ -49,48 +49,6 @@
 			</div>
 		</div>
 	</div>
-
-			<div class="row p-2">
-				<div class="col-12 col-md-6 justify-content-center">
-					<h2 class="text-center bg-main p-2 rounded-pill">Milestone Load:</h2>
-					<div class="d-flex justify-content-center align-content-evenly">
-	
-						<select id="milestoneDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('milestone_new')}}','MilestoneContainer', this.value)">
-							<option value="">Select Milestone</option>
-							{% for milestone in milestoneIds %}
-								<option value="{{ milestone.id }}">{{ milestone.id }}-{{ milestone.name }}</option>
-							{% endfor %}
-						</select>
-						<button class="btn btn-success col-auto" onclick="newForm('{{path('milestone_new')}}','MilestoneContainer')">+</button>
-	
-					</div>
-				</div>
-	
-				<div class="col-12 col-md-6 justify-content-center">
-					<h2 class="text-center bg-main p-2 rounded-pill">Project Load:</h2>
-					<div class="d-flex justify-content-center align-content-evenly">
-	
-						<select id="ProjectDropdown" class="dropdown-center col-auto" onchange="newForm('{{path('project_new')}}','ProjectContainer', this.value)">
-							<option value="">Select Project</option>
-							{% for project in projectsIds %}
-								<option value="{{ project.id }}">{{ project.id }}-{{ project.name }}</option>
-							{% endfor %}
-						</select>
-						<button class="btn btn-success col-auto" onclick="newForm('{{path('project_new')}}', 'ProjectContainer')">+</button>
-	
-					</div>
-				</div>
-			</div>
-	
-			<div class="row p-2">
-				<div class="col-12 col-md-6 justify-content-center">
-					<div id="MilestoneContainer"></div>
-				</div>
-				<div class="col-12 col-md-6 justify-content-center">
-					<div id="ProjectContainer"></div>
-				</div>
-			</div>
-		</div> #}
 
 	<script src="{{ asset('js/formsFunctions.js') }}"></script>
 {% endblock %}
