--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,7 @@
 		{% endblock %}
 
 		<link href="{{ asset('styles/app.css') }}" rel="stylesheet">
+		<script src="{{ asset('js/essentials.js') }}"></script>
 	</head>
 	
 	<body>
@@ -85,6 +86,7 @@
 				setTimeout(function() {
 					hideLoading(); // Hide the loading spinner after a short delay
 				}, 1000); // Change the delay value as needed
+				
 		</script>
 
 		{% block sound %}
@@ -104,7 +106,11 @@
 			{% include 'pausemenu.html.twig' with {'buttons': buttons} %}
 
 		{% endblock %}
+
+		
+
 		{% block body %}{% endblock %}
+
 		{% block foot %}
 			{% include 'index/footer.twig' %}
 		{% endblock %}
