nav bar and footer sin

--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -1,7 +1,7 @@
 <!-- Collapsible Navbar -->
 <div class="collapse navbar-collapse collapse position-sticky fixed-top d-flex justify-content-center" id="navbarCollapse" style="width:100%; z-index: 1040;">
 
-	<nav class=" navbar navbar-dark navbar-expand-lg sin-down-div p-0 m-0 d-flex justify-content-center" style="scale:102%; min-height:2vh;">
+	<nav class=" navbar navbar-dark navbar-expand-lg sin-down-div p-0 m-0 d-flex justify-content-center" style="scale:102%; min-height:5rem;">
 		<button class=" mt-3 col-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<img class="" style="height: 1vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
 		</button>
