--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -58,7 +58,7 @@ a, label, p, h1, h2, h3, h4, h5, h6, li, span {
   background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
 }
 .bg-main-gradient-circle {
-  background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
+  background: linear-gradient(to bottom right, #421042, #315f5b);
 }
 
 .bg-main-gradient-alter {
@@ -155,21 +155,75 @@ html {
 }
 
 .sin-up-div{
-  background: linear-gradient(0deg, rgba(43,10,43,1) 0%, rgba(23,65,61,1) 70%);
+  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(56, 13, 56) 50%);
   clip-path: polygon( 15.884% 12.214%,15.884% 12.214%,12.891% 11.848%,10.212% 10.974%,7.848% 9.721%,5.798% 8.217%,4.064% 6.593%,2.645% 4.975%,1.54% 3.492%,0.752% 2.274%,0.278% 1.449%,0.12% 1.146%,0.12% 99.237%,99.94% 99.237%,99.94% 1.146%,99.94% 1.146%,99.781% 1.455%,99.305% 2.297%,98.514% 3.536%,97.408% 5.042%,95.988% 6.68%,94.257% 8.318%,92.215% 9.823%,89.863% 11.063%,87.203% 11.904%,84.236% 12.214%,84.236% 12.214%,81.517% 11.917%,79.488% 11.108%,77.976% 9.912%,76.808% 8.453%,75.812% 6.856%,74.817% 5.244%,73.649% 3.743%,72.136% 2.477%,70.107% 1.569%,67.389% 1.146%,67.389% 1.146%,64.644% 1.313%,62.574% 2.016%,61.01% 3.131%,59.783% 4.538%,58.724% 6.112%,57.665% 7.732%,56.438% 9.275%,54.874% 10.617%,52.804% 11.638%,50.06% 12.214%,50.06% 12.214%,47.288% 12.148%,45.208% 11.423%,43.649% 10.2%,42.436% 8.639%,41.396% 6.901%,40.357% 5.144%,39.144% 3.53%,37.584% 2.219%,35.504% 1.371%,32.732% 1.146%,32.732% 1.146%,29.985% 1.574%,27.946% 2.497%,26.439% 3.785%,25.285% 5.309%,24.308% 6.941%,23.331% 8.552%,22.178% 10.014%,20.67% 11.197%,18.631% 11.974%,15.884% 12.214% );
 }
 
 .sin-down-div{
   width:100%;
-  background: linear-gradient(0deg, rgba(23,65,61,1) 0%, rgba(43,10,43,1) 70%);
-  clip-path: polygon( 17.428% 86.709%,17.428% 86.709%,14.394% 85.9%,11.6% 83.804%,9.063% 80.745%,6.804% 77.046%,4.84% 73.029%,3.191% 69.018%,1.876% 65.336%,0.913% 62.306%,0.322% 60.25%,0.12% 59.494%,0.12% 0.633%,99.88% 0.633%,99.88% 59.494%,99.88% 59.494%,99.719% 60.256%,99.24% 62.324%,98.442% 65.372%,97.329% 69.073%,95.903% 73.101%,94.165% 77.129%,92.117% 80.83%,89.761% 83.878%,87.1% 85.947%,84.135% 86.709%,84.135% 86.709%,81.418% 86.462%,79.386% 85.792%,77.869% 84.8%,76.694% 83.59%,75.691% 82.266%,74.688% 80.93%,73.513% 79.685%,71.996% 78.635%,69.964% 77.883%,67.248% 77.532%,67.248% 77.532%,64.535% 78.025%,62.545% 79.569%,61.097% 81.912%,60.01% 84.8%,59.104% 87.979%,58.198% 91.195%,57.111% 94.196%,55.663% 96.727%,53.674% 98.535%,50.962% 99.367%,50.962% 99.367%,48.192% 98.958%,46.116% 97.395%,44.558% 94.963%,43.346% 91.948%,42.308% 88.633%,41.27% 85.303%,40.058% 82.243%,38.5% 79.738%,36.423% 78.073%,33.654% 77.532%,33.654% 77.532%,30.927% 77.887%,28.937% 78.652%,27.498% 79.72%,26.428% 80.983%,25.541% 82.337%,24.654% 83.673%,23.584% 84.884%,22.145% 85.866%,20.154% 86.509%,17.428% 86.709% );
+  background: linear-gradient(0deg, rgb(43, 10, 43) 50%, rgb(0, 0, 0) 100%); 
+  clip-path: polygon( 17.428% 99.296%,17.428% 99.296%,14.394% 98.632%,11.6% 96.943%,9.063% 94.486%,6.804% 91.518%,4.84% 88.3%,3.191% 85.087%,1.876% 82.14%,0.913% 79.715%,0.322% 78.07%,0.12% 77.465%,0.12% 0.704%,99.88% 0.704%,99.88% 77.465%,99.88% 77.465%,99.719% 78.076%,99.24% 79.735%,98.442% 82.18%,97.329% 85.149%,95.903% 88.38%,94.165% 91.611%,92.117% 94.58%,89.761% 97.025%,87.1% 98.685%,84.135% 99.296%,84.135% 99.296%,81.418% 99.022%,79.386% 98.275%,77.869% 97.172%,76.694% 95.826%,75.691% 94.352%,74.688% 92.866%,73.513% 91.481%,71.996% 90.313%,69.964% 89.475%,67.248% 89.085%,67.248% 89.085%,64.535% 89.239%,62.545% 89.887%,61.097% 90.917%,60.01% 92.214%,59.104% 93.666%,58.198% 95.161%,57.111% 96.584%,55.663% 97.823%,53.674% 98.765%,50.962% 99.296%,50.962% 99.296%,48.192% 99.235%,46.116% 98.566%,44.558% 97.438%,43.346% 95.998%,42.308% 94.394%,41.27% 92.774%,40.058% 91.285%,38.5% 90.075%,36.423% 89.292%,33.654% 89.085%,33.654% 89.085%,30.927% 89.48%,28.937% 90.331%,27.498% 91.519%,26.428% 92.925%,25.541% 94.431%,24.654% 95.917%,23.584% 97.266%,22.145% 98.358%,20.154% 99.074%,17.428% 99.296% );
 }
 
 .sin-down-div.expanded{
+  background: linear-gradient(0deg, rgba(43,10,43,1) 0%, rgba(43,10,43,1) 100%);;
+  background-color: rgba(43,10,43,1);
   clip-path: polygon(0 1%, 100% 0, 100% 100%, 0% 100%);
-  transition: 0.5s ease;
+  transition: 0.5s background-color ease;
 }
 
 .rounded-trapezoid{
   clip-path: polygon( 0.245% 14.876%,0.245% 14.876%,0.139% 12.594%,0.203% 10.381%,0.425% 8.277%,0.791% 6.323%,1.286% 4.559%,1.898% 3.025%,2.613% 1.762%,3.418% 0.81%,4.298% 0.209%,5.241% 0%,94.759% 0%,94.759% 0%,95.702% 0.209%,96.582% 0.81%,97.387% 1.762%,98.102% 3.025%,98.714% 4.559%,99.209% 6.323%,99.575% 8.277%,99.797% 10.381%,99.861% 12.594%,99.755% 14.876%,93.357% 90.124%,93.357% 90.124%,93.163% 91.798%,92.882% 93.359%,92.519% 94.793%,92.084% 96.084%,91.583% 97.218%,91.024% 98.18%,90.414% 98.954%,89.762% 99.525%,89.075% 99.879%,88.36% 100%,11.64% 100%,11.64% 100%,10.925% 99.879%,10.238% 99.525%,9.586% 98.954%,8.976% 98.18%,8.417% 97.218%,7.916% 96.084%,7.481% 94.793%,7.118% 93.359%,6.837% 91.798%,6.643% 90.124%,0.245% 14.876% );
+}
+
+.stack {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.stack span {
+  /*font-weight: bold;*/
+  grid-row-start: 1;
+  grid-column-start: 1;
+  font-size: 2.5rem;
+  --stack-height: calc(100% / var(--stacks) - 1px);
+  --inverse-index: calc(calc(var(--stacks) - 1) - var(--index));
+  --clip-top: calc(var(--stack-height) * var(--index));
+  --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
+  clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
+  animation: stack 340ms cubic-bezier(.46,.29,0,1.24) 0 backwards calc(var(--index) * 120ms), glitch 1s ease infinite 1s alternate-reverse;
+}
+
+.stack span:nth-child(odd) { --glitch-translate: 8px; }
+.stack span:nth-child(even) { --glitch-translate: -8px; }
+
+@keyframes stack {
+  0% {
+    opacity: 0;
+    transform: translateX(-70%);
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+  };
+  60% {
+    opacity: 0.5;
+    transform: translateX(70%);
+  }
+  80% {
+    transform: none;
+    opacity: 1;
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+@keyframes glitch {
+  0% {
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+    transform: translate(var(--glitch-translate));
+  }
+  2% {
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  4%, 100% {  text-shadow: none; transform: none; }
 }
