--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -1,25 +1,21 @@
 <!-- Collapsible Navbar -->
 <div class="collapse navbar-collapse collapse position-sticky fixed-top d-flex justify-content-center" id="navbarCollapse" style="width:100%; z-index: 1040;">
 
-	<nav class=" navbar navbar-dark navbar-expand-lg sin-down-div p-0 m-0 d-flex justify-content-center" style="scale:102%; min-height:5rem;">
-		<button class=" mt-3 col-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<img class="" style="height: 1vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
+	<nav class=" navbar navbar-dark navbar-expand-lg sin-down-div row justify-content-center" style="scale:102%; ">
+		<button class=" col-auto navbar-toggler bg-dark rounded-pill p-2 border-1 border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<img style="height: 7vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
 		</button>
 
-		<div class="align-items-center w-100 justify-content-center row p-0 m-3">
-			<div class="col-3 d-none d-lg-block">
-				<img class="img-fluid" src="bannerPandaold.png" alt="Other Image">
+		<div class="align-items-center row p-0 m-0 w-100">
+			<div class="col-2 p-0 m-0 d-none d-lg-block">
+				<img style="height: auto; width: 100%;" src="bannerPandaold.png" alt="Other Image">
 			</div>
 
-			<div class="col-auto">
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav">
-						<a class="nav-link active" aria-current="page" href="/">Games</a>
-						<a class="nav-link active" href="#">Projects</a>
-						<a class="nav-link active" href="/timeline">CV</a>
-						<a class="nav-link active" href="/login">Account</a>
-
-					</div>
+			<div class="col-7">
+				<div id="navbarNavAltMarkup" class="collapse navbar-collapse row justify-content-evenly">>
+					<a class="col-auto" aria-current="page" href="/">GAMES</a>
+					<a class="col-auto" href="#">WEB</a>
+					<a class="col-auto" href="/timeline">TIMELINE</a>
 				</div>
 			</div>
 		</div>
