--- a/templates/index/IndexHeader.twig
+++ b/templates/index/IndexHeader.twig
@@ -1,7 +1,7 @@
 {# templates/contact.html.twig #}
 
-<div class="row m-0 p-0 justify-content-center {% if darkbg %} bg-dark rounded-5 border border-light {% endif %}">
-	<a class="col-auto py-5" href="#{{ textRef }}">
-		<h3 class="text-center text-capitalize mb-4 white-text d-none d-md-block">{{ headText }}</h3>
+<div class="w-100 d-flex justify-content-center {% if darkbg %} bg-dark rounded-5 border border-light {% endif %}">
+	<a class="col-auto py-2" href="#{{ textRef }}">
+		<h3 class="text-center text-capitalize mb-4 white-text ">{{ headText }}</h3>
 	</a>
 </div>
