--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -24,7 +24,7 @@
 		}
 	</style>
 
-	<div id="timeline" class="row m-0 p-0 bg-accent-dark" style="min-height: 75vh;">
+	<div id="timeline" class="row mb-5 p-0 bg-accent-dark" style="min-height: 100vh;">
 		{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
 
 		<div class="col-12 row fixed-top py-2 position-sticky bg-main-dark rounded-4" style="z-index: 1042;">
@@ -168,7 +168,7 @@
 			</div>
 
 		{% endfor %}
-		<div class="row d-flex container-fluid flex-column justify-content-center align-items-center mb-5 p-0 m-0">
+		<div class="row d-flex container-fluid flex-column justify-content-center align-items-center mb-5 p-0 m-0 mb-5">
 			<button class="btn btn-outline-success bg-dark shadow-custom col-3 text-center m-0 py-3" onclick="window.location.href='/#contact'">
 				Let's build together!</button>
 		</div>
