--- a/templates/index/AboutMe.twig
+++ b/templates/index/AboutMe.twig
@@ -1,7 +1,7 @@
 
 <section id="aboutme" class="container-fluid d-flex flex-column justify-content-center align-items-center p-0" style="min-height: 93vh; width: 100%; overflow: hidden;">
     <img class="mx-auto position-fixed bg-dark" 
-     style="z-index: -100000; filter: blur(2px) brightness(66%); height: 102vh; width: auto; 
+     style="z-index: -100000; filter: blur(2px) brightness(66%); height: 100vh; width: auto; 
             mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);" 
      src="{{ asset('gridbg.gif') }}" 
      alt="Other Image"/>
@@ -9,7 +9,7 @@
     <div class="rounded-circle bg-dark border border-light">
         <img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
     </div>
-    <div class="rounded-trapezoid container-md bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center" style="min-height: 35vh;">
+    <div class="rounded-trapezoid container-md bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center my-5" style="min-height: 35vh;">
         <div class=" container-fluid rounded-trapezoid bg-main-dark-translucent d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
             <div class="row mt-md-0 mt-md-3 m-1">
                 <h2 class="p-md-2 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
