--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -35,24 +35,47 @@
 		left: 50%;
 		transform-origin: center center 0;
 		transition: transform 0.5s;
+
+		 box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2), 
+                        0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .item:hover {
+		transform: translate(-50%, -50%) scale(1.2);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3), 
+                0 8px 10px rgba(0, 0, 0, 0.15);
+}
+
+#games {
+		width: 100%;
+            height: 100%;
+            background-image: url("{{ asset('bg-graph.svg') }}");
+            background-size: cover; /* Make the background cover the entire container */
+            background-repeat: no-repeat; /* Ensure the background does not repeat */
+            background-position: center;
 	}
+
 </style>
 
-<div class="bg-main-gradient-circle p-0 m-0 rounded-top-5">
+<div id="games" class=" bg-main-dark p-0 m-0 rounded-top-5">
 
-	<div class="row justify-content-center">
-		<div class="col-auto stack pt-5 m-0" style="--stacks: 3;">
-			<span class="p-3" style="--index: 0;">GAME HIGHLIGHTS</span>
-			<span class="p-3" style="--index: 1;">GAME HIGHLIGHTS</span>
-			<span class="p-3" style="--index: 2;">GAME HIGHLIGHTS</span>
+	<div class="w-100 d-flex justify-content-center" >
+		<div class="col-12 col-md-6 rounded-trapezoid-alter py-2 bg-main d-flex justify-content-center" >
+			<div class=" p-0 m-0 stack" style="--stacks: 3;">
+				<span class="p-3 text-center" style="--index: 0;">GAME HIGHLIGHTS</span>
+				<span class="p-3 text-center" style="--index: 1;">GAME HIGHLIGHTS</span>
+				<span class="p-3 text-center" style="--index: 2;">GAME HIGHLIGHTS</span>
+			</div>
 		</div>
 	</div>
 
-	<section id="test" class="p-0 m-0 d-flex justify-content-center" style="min-height: 66vh; align-items: center; overflow: hidden; perspective: 6000px;">
+	<section id="test" class="p-0 m-0 d-flex justify-content-center" style="min-height: 69vh; align-items: center; overflow: hidden; perspective: 6000px;">
 
 		<button class="carousel-control-prev" type="button" onclick="rotateCarousel({{games|length}})">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<div class="rounded-circle bg-dark p-3 border border-2 border-light" >
+			<span class="carousel-control-prev-icon p-3" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
+			</div>
 		</button>
 
 		<div class="carousel row">
@@ -72,8 +95,10 @@
 		</div>
 
 		<button class="carousel-control-next" type="button" onclick="rotateCarousel(-{{games|length}})">
+			<div class="rounded-circle bg-dark p-3 border border-2 border-light" >
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
+				</div>
 		</button>
 
 	</section>
