--- a/templates/index/contact.twig
+++ b/templates/index/contact.twig
@@ -1,19 +1,19 @@
 {# templates/contact.html.twig #}
 
-<section id="contact" class="bg-accent-dark" style="min-height: 100vh;">
+<section id="contact" class="bg-accent-dark" style="min-height: 86vh;">
     {% include 'index/IndexHeader.twig' with {'upRef': 'projects', 'textRef': 'contact', 'headText': "Let's Chat! 🐼", 'darkbg': true} %}
 
-    <div class="container px-3 py-5">
+    <div class="container px-3 py-4">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <form id="contactForm" action="{{ path('app_email') }}" method="post" class="needs-validation" novalidate>
-                    <div class="mb-3">
+                <form id="contactForm" action="{{ path('app_email') }}" method="post" class="needs-validation row justify-content-center" novalidate>
+                    <div class="mb-3 col-12 col-md-6">
                         <label for="name" class="form-label">Name:</label>
                         <input type="text" class="form-control" id="name" name="name" required>
                         <div class="invalid-feedback">Please enter your name.</div>
                     </div>
 
-                    <div class="mb-3">
+                    <div class="mb-3 col-12 col-md-6">
                         <label for="email" class="form-label">Email:</label>
                         <input type="email" class="form-control" id="email" name="email" required>
                         <div class="invalid-feedback">Please enter a valid email address.</div>
@@ -25,7 +25,7 @@
                         <div class="invalid-feedback">Please enter a message.</div>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="rounded-pill w-50 btn custom-btn bg-accent text-white">Submit</button>
                 </form>
             </div>
         </div>
